// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#zashiki-react-redux/app/components/stages/debark/status/rejected \`code\` is an integer renders 1`] = `
<div
  className="debark rejected"
>
  <h2>
    1
    : 
    MOCK NAME
  </h2>
</div>
`;

exports[`#zashiki-react-redux/app/components/stages/debark/status/rejected \`message\` is a string renders 1`] = `
<div
  className="debark rejected"
>
  <h2>
    MOCK NAME
  </h2>
  <p>
    MOCK MESSAGE
  </p>
</div>
`;

exports[`#zashiki-react-redux/app/components/stages/debark/status/rejected Always renders 1`] = `
<div
  className="debark rejected"
>
  <h2>
    MOCK NAME
  </h2>
</div>
`;
